external-crates/move/crates/move-compiler/tests/move_2024/unit_test/cross_module_init_function.move
// check that fun `init` can not be used cross module
module 0x1::M {
    fun init() { }
}

module 0x1::Tests {
    #[test]
    fun tester() {
        use 0x1::M;
        M::init();
    }
}
